# meta

.agent/skills/: .gitkeep
.agent/skills/subagent-driven-development/: SKILL.md
.agent/skills/systematic-debugging/: SKILL.md
.agent/skills/writing-plans/: SKILL.md
ai_customer_support_env/: .dockerignore  Dockerfile  README.md  app.py  openenv.yaml  pyproject.toml  requirements.txt
ai_customer_support_env/env/: __init__.py  environment.py  graders.py  models.py  scenarios.py  simulator.py  tasks.py
ai_customer_support_env/tests/: conftest.py  test_environment.py  test_graders.py  test_models.py
