[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-customer-support-env"
version = "1.0.0"
description = "OpenEnv-compliant AI customer support automation environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
    "fastapi>=0.111,<0.200",
    "uvicorn[standard]>=0.29,<0.35",
    "gradio>=4.36,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["env"]
omit = ["tests/*"]
